// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen actionCodes config import-export] should create the actionCodes: the actionCodes have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ actioncode [name: 'cfgObjectTest', type: 'transfer', tenant: 'Environment']
Completed. 1 object created. 0 object updated. 0 object skipped.
",
}
`;

exports[`[mutagen actionCodes config import-export] should skip the same actionCodes: the actionCodes have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "= actioncode [name: 'cfgObjectTest', type: 'transfer', tenant: 'Environment']
Completed. 0 object created. 0 object updated. 1 object skipped.
",
}
`;

exports[`[mutagen actionCodes config import-export] should throw exception when new actionCodes to import miss mandatory properties actionCodes: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Missing properties:
  - actioncode [name: 'emptyCfgObjectTest', type: 'transfer', tenant: 'Environment']:
    - code
",
  "stdout": "",
}
`;

exports[`[mutagen actionCodes config import-export] should update the modified actionCodes: the modified actionCodes have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ actioncode [name: 'cfgObjectTest', type: 'transfer', tenant: 'Environment']
Completed. 0 object created. 1 object updated. 0 object skipped.
",
}
`;
